openApi: что-то рабочее
