# openApi/server/api/openapi.yaml
@@ -1,11 +1,11 @@
 openapi: 3.0.0
 info:
-  title: OpenApi микросервис команды workwolf
   description: Микросервис дает возможность получить список последних транзакий пользователя
     с учетом категорий покупок/пополнений
+  title: OpenApi микросервис команды workwolf
   version: 1.0.0
 servers:
-  - url: https://workwolf.swagger.io/api/v3
+- url: http://localhost:8080/api
 paths:
   /transactions:
     get:
@@ -13,50 +13,17 @@ paths:
       operationId: getTransactions
       responses:
         "200":
-          description: Успешно
           content:
             application/json:
               schema:
-                type: array
                 items:
-                  $ref: "#/components/schemas/Transaction"
-                x-content-type: application/json
-      x-swagger-router-controller: Default
+                  $ref: '#/components/schemas/Transaction'
+                type: array
+          description: Успешно
+      x-eov-operation-handler: controllers/DefaultController
 components:
   schemas:
     Transaction:
-      required:
-        - id
-        - type
-        - value
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 10
-        value:
-          type: integer
-          description: Размер транзакции в рублях
-          format: int64
-          example: 4877
-        type:
-          type: string
-          description: "Направление транзакции (in – пополнение, out – списание)"
-          enum:
-            - in
-            - out
-        category:
-          $ref: "#/components/schemas/Category"
-        status:
-          type: string
-          description: Статус транзакции
-          example: Consumed
-          enum:
-            - AwaitingAuthorisation
-            - Rejected
-            - Authorised
-            - Consumed
       example:
         id: 10
         type: in
@@ -65,20 +32,52 @@ components:
           id: 1
         value: 4877
         status: Consumed
+      properties:
+        id:
+          example: 10
+          format: int64
+          type: integer
+        value:
+          description: Размер транзакции в рублях
+          example: 4877
+          format: int64
+          type: integer
+        type:
+          description: "Направление транзакции (in – пополнение, out – списание)"
+          enum:
+          - in
+          - out
+          type: string
+        category:
+          $ref: '#/components/schemas/Category'
+        status:
+          description: Статус транзакции
+          enum:
+          - AwaitingAuthorisation
+          - Rejected
+          - Authorised
+          - Consumed
+          example: Consumed
+          type: string
+      required:
+      - id
+      - type
+      - value
+      type: object
       xml:
         name: transaction
     Category:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 1
-        name:
-          type: string
-          example: Restaurant
       example:
         name: Restaurant
         id: 1
+      properties:
+        id:
+          example: 1
+          format: int64
+          type: integer
+        name:
+          example: Restaurant
+          type: string
+      type: object
       xml:
         name: category
